--- a/labs/Chakeitha_McNear_Miller_Copy_of_CNN_dogs_N_cats.ipynb
+++ b/labs/Chakeitha_McNear_Miller_Copy_of_CNN_dogs_N_cats.ipynb
@@ -7915,7 +7915,8 @@
       "pygments_lexer": "ipython3",
       "version": "3.9.12"
     },
-    "gpuClass": "standard"
+    "gpuClass": "standard",
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
